Fixed an issue with fallback on locked profile upon profile deletion.

BUG=687894

R=bauerb@chromium.org

Review-Url: https://codereview.chromium.org/2681333002
Cr-Commit-Position: refs/heads/master@{#449594}

Former-commit-id: 33e953c922b7dcfa88418ae62d098d6d3e869535